Implement hover btn and function

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 </head>
 
 <body>
-    <div id="grid">
+    <div id="ui">
+        <div id="options">
+            <div id="buttons">
+                <button id="hoverbtn">hover</button>
+                <button id="clickbtn">click</button>
+            </div>
+        </div>
+        <div id="grid">
+        </div>
     </div>
+    
 </body>
 
 </html>
