Update color to match with pen's color

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div id="ui">
         <div id="options">
+            <input type="color" id="color" name="head" value="#e66465">
             <div id="buttons">
                 <button id="hoverbtn">hover</button>
                 <button id="clickbtn">click</button>
