Add clear btn function

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <div id="options">
             <input type="color" id="color" name="head" value="#e66465">
             <div id="buttons">
-                <button id="hoverbtn">hover</button>
-                <button id="clickbtn">click</button>
+                <button id="hoverbtn">HOVER</button>
+                <button id="clickbtn">CLICK</button>
             </div>
+            <button id="clearbtn">CLEAR</button>
         </div>
         <div id="grid">
         </div>
