Add and implement random color btn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div id="ui">
         <div id="options">
-            <input type="color" id="color" name="head" value="#e66465">
+            <input type="color" id="color" name="head" value="#00DAEA">
+            <button id="random">RANDOM</button>
             <div id="buttons">
                 <button id="hoverbtn">HOVER</button>
                 <button id="clickbtn">CLICK</button>
