--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <div id="options">
             <input type="color" id="color" name="head" value="#00DAEA">
             <button id="random">RANDOM</button>
+            <button id="darken">DARKEN</button>
+            <button id="lighten">LIGHTEN</button>
             <div id="buttons">
                 <button id="hoverbtn">HOVER</button>
                 <button id="clickbtn">CLICK</button>
