--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <script type='text/javascript' src='tinycolor.js'></script>
     <script type="text/javascript" src="javascript.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
