--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button id="random">RANDOM</button>
             <button id="darken">DARKEN</button>
             <button id="lighten">LIGHTEN</button>
+            <button id="eraser">ERASER</button>
             <div id="buttons">
                 <button id="hoverbtn">HOVER</button>
                 <button id="clickbtn">CLICK</button>
