--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 </head>
 
 <body>
+    <p id="title">SKETCH BOARD</p>
     <div id="ui">
         <div id="options">
-            <input type="color" id="color" name="head" value="#00DAEA">
-            <button id="random">RANDOM</button>
-            <button id="darken">DARKEN</button>
-            <button id="lighten">LIGHTEN</button>
-            <button id="eraser">ERASER</button>
-            <div id="buttons">
+            <div id="pen">
+                <input type="color" id="color" name="head" value="#00DAEA">
+                <button id="random">RANDOM</button>
+                <button id="darken">DARKEN</button>
+                <button id="lighten">LIGHTEN</button>
+                <button id="eraser">ERASER</button>
+            </div>
+            <div id="mouse">
                 <button id="hoverbtn">HOVER</button>
                 <button id="clickbtn">CLICK</button>
             </div>
             <button id="clearbtn">CLEAR</button>
         </div>
-        <div id="grid">
-        </div>
+        <div id="grid"></div>
     </div>
-    
+
 </body>
 
 </html>
