Add and style footer

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div id="grid"></div>
     </div>
 
+    <p id="footer">Copyright © 2022 <a href="https://github.com/Xenocidy/sketch-board"
+            target="_blank">github.com/Xenocidy</a></p>
+
 </body>
 
 </html>
