Add range slider

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <button id="clickbtn">CLICK</button>
             </div>
             <button id="clearbtn">CLEAR</button>
+            <p><span class="sizeDisplay"></span> x <span class="sizeDisplay"></span></p>
+            <div>
+                <input type="range" min="1" max="100" value="16" id="sizeInput">
+            </div>
         </div>
         <div id="grid"></div>
     </div>
