--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button id="clearbtn">CLEAR</button>
             <p><span class="sizeDisplay"></span> x <span class="sizeDisplay"></span></p>
             <div>
-                <input type="range" min="1" max="100" value="16" id="sizeInput">
+                <input type="range" min="1" max="100" value="16" id="sizeInput" oninput="changeSize()">
             </div>
         </div>
         <div id="grid"></div>
