--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <button id="hoverbtn">HOVER</button>
                 <button id="clickbtn">CLICK</button>
             </div>
-            <button id="clearbtn">CLEAR</button>
+            <div id="clear">
+                <button id="clearbtn">CLEAR</button>
+            </div>
             <p><span class="sizeDisplay"></span> x <span class="sizeDisplay"></span></p>
             <div>
                 <input type="range" min="1" max="100" value="16" id="sizeInput" oninput="changeSize()">
@@ -36,7 +38,6 @@
 
     <p id="footer">Copyright © 2022 <a href="https://github.com/Xenocidy/sketch-board"
             target="_blank">github.com/Xenocidy</a></p>
-
 </body>
 
 </html>
