Style input color and adjust default color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="ui">
         <div id="options">
             <div id="pen">
-                <input type="color" id="color" name="head" value="#00DAEA">
+                <input type="color" id="color" name="head" value="#333334">
                 <button id="random">RANDOM</button>
                 <button id="darken">DARKEN</button>
                 <button id="lighten">LIGHTEN</button>
